[gd_scene load_steps=5 format=3 uid="uid://dma62pseyc6cp"]

[ext_resource type="Script" uid="uid://b4e0xh1d56moc" path="res://scripts/EndOfDay/end_of_day_scene.gd" id="1_6vg3a"]
[ext_resource type="Script" uid="uid://c3twuvgu76b4e" path="res://scripts/EndOfDay/money_label.gd" id="2_0tbst"]
[ext_resource type="Texture2D" uid="uid://cyixajn3xj61w" path="res://images/White_Pixel_1x1.jpg" id="2_wjh2n"]
[ext_resource type="Script" uid="uid://3fr7va3p6bqe" path="res://scripts/EndOfDay/show_result_row.gd" id="3_agv5m"]

[node name="EndOfDayScene" type="Node2D"]
script = ExtResource("1_6vg3a")

[node name="MoneyLabel" type="Label" parent="."]
offset_right = 105.0
offset_bottom = 23.0
theme_override_font_sizes/font_size = 50
text = "Total money: "
script = ExtResource("2_0tbst")
fly_in_label_start_pos = Vector2(410, 98)
fly_in_label_end_pos = Vector2(336, 19)

[node name="AddedMoney" type="Label" parent="MoneyLabel"]
self_modulate = Color(0.20559928, 0.67871237, 0.1760197, 1)
layout_mode = 0
offset_left = 336.0
offset_top = 19.0
offset_right = 376.0
offset_bottom = 61.0
theme_override_font_sizes/font_size = 30
text = "+1"

[node name="CustomersServedLabel" type="Label" parent="."]
offset_left = 422.0
offset_top = 145.0
offset_right = 558.0
offset_bottom = 168.0
text = "Cutomers served:"
script = ExtResource("3_agv5m")

[node name="CountLabel" type="Label" parent="CustomersServedLabel"]
layout_mode = 0
offset_left = 142.0
offset_right = 182.0
offset_bottom = 23.0
text = "8"

[node name="MoneyLabel" type="Label" parent="CustomersServedLabel"]
layout_mode = 0
offset_left = 177.0
offset_right = 217.0
offset_bottom = 23.0
text = "80"

[node name="CustomersServedFastLabel" type="Label" parent="."]
offset_left = 355.0
offset_top = 170.0
offset_right = 562.0
offset_bottom = 193.0
text = "Customers served quickly: "
script = ExtResource("3_agv5m")

[node name="CountLabel" type="Label" parent="CustomersServedFastLabel"]
layout_mode = 0
offset_left = 210.0
offset_right = 250.0
offset_bottom = 23.0
text = "8"

[node name="MoneyLabel" type="Label" parent="CustomersServedFastLabel"]
layout_mode = 0
offset_left = 242.0
offset_right = 282.0
offset_bottom = 23.0
text = "80"

[node name="RentLabel" type="Label" parent="."]
offset_left = 516.0
offset_top = 200.0
offset_right = 574.0
offset_bottom = 223.0
text = "Rent: "
script = ExtResource("3_agv5m")

[node name="CountLabel" type="Label" parent="RentLabel"]
layout_mode = 0
offset_left = 50.0
offset_right = 90.0
offset_bottom = 23.0
text = "8"

[node name="MoneyLabel" type="Label" parent="RentLabel"]
layout_mode = 0
offset_left = 80.0
offset_right = 120.0
offset_bottom = 23.0
text = "80"

[node name="LineSprite" type="Sprite2D" parent="."]
position = Vector2(487, 227)
scale = Vector2(200, 2)
texture = ExtResource("2_wjh2n")

[node name="EODBalanceLabel" type="Label" parent="."]
offset_left = 413.0
offset_top = 229.0
offset_right = 557.0
offset_bottom = 252.0
text = "Total day balance: "
script = ExtResource("3_agv5m")

[node name="CountLabel" type="Label" parent="EODBalanceLabel"]
layout_mode = 0
offset_left = 151.0
offset_right = 191.0
offset_bottom = 23.0
text = "8"

[node name="MoneyLabel" type="Label" parent="EODBalanceLabel"]
layout_mode = 0
offset_left = 184.0
offset_right = 224.0
offset_bottom = 23.0
text = "80"

[node name="StickyNoteSpaces" type="Node2D" parent="."]
position = Vector2(597, 229)

[node name="Space1" type="Node2D" parent="StickyNoteSpaces"]
position = Vector2(-471, -41)
rotation = -0.43579105

[node name="Sprite2D" type="Sprite2D" parent="StickyNoteSpaces/Space1"]
scale = Vector2(150, 150)
texture = ExtResource("2_wjh2n")

[node name="Space2" type="Node2D" parent="StickyNoteSpaces"]
position = Vector2(370, -110)
rotation = 0.3421585

[node name="Sprite2D" type="Sprite2D" parent="StickyNoteSpaces/Space2"]
scale = Vector2(150, 150)
texture = ExtResource("2_wjh2n")

[node name="Space3" type="Node2D" parent="StickyNoteSpaces"]
position = Vector2(-33, 189)
rotation = 0.018647403

[node name="Sprite2D" type="Sprite2D" parent="StickyNoteSpaces/Space3"]
scale = Vector2(150, 150)
texture = ExtResource("2_wjh2n")

[node name="Space4" type="Node2D" parent="StickyNoteSpaces"]
position = Vector2(101.000015, -143.00002)
rotation = -0.1901415

[node name="Sprite2D" type="Sprite2D" parent="StickyNoteSpaces/Space4"]
scale = Vector2(150, 150)
texture = ExtResource("2_wjh2n")

[node name="Space5" type="Node2D" parent="StickyNoteSpaces"]
position = Vector2(-307, 66.999985)
rotation = 0.3925405

[node name="Sprite2D" type="Sprite2D" parent="StickyNoteSpaces/Space5"]
scale = Vector2(150, 150)
texture = ExtResource("2_wjh2n")

[node name="Space6" type="Node2D" parent="StickyNoteSpaces"]
position = Vector2(144, 57.999985)
rotation = -0.43655288

[node name="Sprite2D" type="Sprite2D" parent="StickyNoteSpaces/Space6"]
scale = Vector2(150, 150)
texture = ExtResource("2_wjh2n")

[node name="Space7" type="Node2D" parent="StickyNoteSpaces"]
position = Vector2(-492, 201.99998)
rotation = 0.2158013

[node name="Sprite2D" type="Sprite2D" parent="StickyNoteSpaces/Space7"]
scale = Vector2(150, 150)
texture = ExtResource("2_wjh2n")

[node name="Space8" type="Node2D" parent="StickyNoteSpaces"]
position = Vector2(359, 85.999985)
rotation = 0.44148868

[node name="Sprite2D" type="Sprite2D" parent="StickyNoteSpaces/Space8"]
scale = Vector2(150, 150)
texture = ExtResource("2_wjh2n")

[node name="Space9" type="Node2D" parent="StickyNoteSpaces"]
position = Vector2(241, 237.99998)
rotation = 0.44148868

[node name="Sprite2D" type="Sprite2D" parent="StickyNoteSpaces/Space9"]
scale = Vector2(150, 150)
texture = ExtResource("2_wjh2n")

[node name="Space10" type="Node2D" parent="StickyNoteSpaces"]
position = Vector2(-221, 254)
rotation = -0.22682571

[node name="Sprite2D" type="Sprite2D" parent="StickyNoteSpaces/Space10"]
scale = Vector2(150, 150)
texture = ExtResource("2_wjh2n")

[node name="Space11" type="Node2D" parent="StickyNoteSpaces"]
position = Vector2(444, 263)
rotation = -0.1979605

[node name="Sprite2D" type="Sprite2D" parent="StickyNoteSpaces/Space11"]
scale = Vector2(150, 150)
texture = ExtResource("2_wjh2n")
